--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "google-optimize-service",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "Highly customizable, dependency-free, universal, service abstraction around Google Optimize.",
-  "main": "lib/google-optimize-service.node.js",
+  "main": "lib/google-optimize-service.cjs.js",
   "module": "lib/google-optimize-service.esm.js",
-  "unpkg": "lib/google-optimize-service.min.js",
-  "jsdelivr": "lib/google-optimize-service.min.js",
+  "unpkg": "lib/google-optimize-service.umd.js",
+  "jsdelivr": "lib/google-optimize-service.umd.js",
   "scripts": {
     "build": "rollup -c",
     "test": "jest --testPathIgnorePatterns=/package-tests/ --env=jsdom",
@@ -51,19 +51,25 @@
   },
   "homepage": "https://github.com/haensl/google-optimize-service#readme",
   "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@babel/preset-env": "^7.9.5",
+    "@babel/core": "^7.11.6",
+    "@babel/plugin-transform-runtime": "^7.11.5",
+    "@babel/preset-env": "^7.11.5",
     "@haensl/eslint-config": "^1.3.0",
-    "babel-jest": "^25.3.0",
-    "eslint": "^6.8.0",
-    "husky": "^4.2.5",
-    "jest": "^25.3.0",
-    "jest-junit": "^10.0.0",
-    "rollup": "^2.6.1",
+    "@rollup/plugin-babel": "^5.2.1",
+    "@rollup/plugin-commonjs": "^15.0.0",
+    "@rollup/plugin-node-resolve": "^9.0.0",
+    "babel-jest": "^26.3.0",
+    "eslint": "^7.8.1",
+    "husky": "^4.3.0",
+    "jest": "^26.4.2",
+    "jest-junit": "^11.1.0",
+    "rollup": "^2.26.11",
     "rollup-plugin-ascii": "0.0.3",
-    "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-node-builtins": "^2.1.2",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-terser": "^5.3.0"
+    "rollup-plugin-node-polyfills": "^0.2.1",
+    "rollup-plugin-peer-deps-external": "^2.2.3",
+    "rollup-plugin-terser": "^7.0.2"
+  },
+  "dependencies": {
+    "@babel/runtime": "^7.11.2"
   }
 }
