--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "unpkg": "lib/google-optimize-service.umd.js",
   "jsdelivr": "lib/google-optimize-service.umd.js",
   "scripts": {
-    "build": "rollup -c",
+    "build": "npm run clean && rollup -c",
+    "clean": "rimraf ./dist",
     "test": "jest --testPathIgnorePatterns=/package-tests/ --env=jsdom",
     "test:ci": "jest --runInBand --no-cache --ci --reporters='default' --testPathIgnorePatterns=/package-tests/ --reporters='jest-junit' --passWithNoTests",
     "tdd": "jest --env=jsdom --watch",
