--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "husky": "^4.3.0",
     "jest": "^26.6.3",
     "jest-junit": "^12.0.0",
+    "rimraf": "^3.0.2",
     "rollup": "^2.33.2",
     "rollup-plugin-ascii": "0.0.3",
     "rollup-plugin-node-polyfills": "^0.2.1",
