--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "google-optimize-service",
-  "version": "1.1.11",
+  "version": "1.1.12",
   "description": "Highly customizable, dependency-free, universal, service abstraction around Google Optimize.",
   "main": "lib/google-optimize-service.cjs.js",
   "module": "lib/google-optimize-service.esm.js",
@@ -13,7 +13,8 @@
     "test:ci": "jest --runInBand --no-cache --ci --reporters='default' --testPathIgnorePatterns=/package-tests/ --reporters='jest-junit' --passWithNoTests",
     "tdd": "jest --env=jsdom --watch",
     "lint": "eslint -c .eslintrc.json \"!(lib)/**/*.js\"",
-    "lint:ci": "eslint --format junit -o test-results/eslint/results.xml -c .eslintrc.json \"!(lib)/**/*.js\""
+    "lint:ci": "eslint --format junit -o test-results/eslint/results.xml -c .eslintrc.json \"!(lib)/**/*.js\"",
+    "prepare": "husky install"
   },
   "jest": {
     "testEnvironment": "jsdom",
@@ -65,7 +66,7 @@
     "@rollup/plugin-node-resolve": "^13.0.0",
     "babel-jest": "^27.0.6",
     "eslint": "^8.5.0",
-    "husky": "^4.3.8",
+    "husky": "^7.0.4",
     "jest": "^27.0.6",
     "jest-junit": "^13.0.0",
     "rimraf": "^3.0.2",
