--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "google-optimize-service",
-  "version": "1.1.15",
+  "version": "1.1.16",
   "description": "Highly customizable, dependency-free, universal, service abstraction around Google Optimize.",
   "main": "lib/google-optimize-service.cjs.js",
   "module": "lib/google-optimize-service.esm.js",
@@ -45,6 +45,7 @@
     "email": "h.p.dietz@gmail.com",
     "twitter": "@h_p_d"
   },
+  "funding": "https://github.com/sponsors/haensl",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/haensl/google-optimize-service/issues"
