--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "google-optimize-service",
-  "version": "1.1.18",
+  "version": "1.1.19",
   "description": "Highly customizable, dependency-free, universal, service abstraction around Google Optimize.",
   "main": "lib/google-optimize-service.cjs.js",
   "module": "lib/google-optimize-service.esm.js",
@@ -56,20 +56,20 @@
     "@babel/plugin-transform-runtime": "^7.12.15",
     "@babel/preset-env": "^7.12.13",
     "@haensl/eslint-config": "^1.4.1",
-    "@rollup/plugin-babel": "^5.2.3",
-    "@rollup/plugin-commonjs": "^21.0.1",
-    "@rollup/plugin-node-resolve": "^13.0.0",
+    "@rollup/plugin-babel": "^6.0.3",
+    "@rollup/plugin-commonjs": "^24.0.0",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-terser": "^0.3.0",
     "babel-jest": "^27.0.6",
     "eslint": "^8.5.0",
     "husky": "^7.0.4",
     "jest": "^27.0.6",
     "jest-junit": "^13.0.0",
     "rimraf": "^3.0.2",
-    "rollup": "^2.38.5",
+    "rollup": "^3.9.1",
     "rollup-plugin-ascii": "0.0.3",
     "rollup-plugin-node-polyfills": "^0.2.1",
-    "rollup-plugin-peer-deps-external": "^2.2.4",
-    "rollup-plugin-terser": "^7.0.2"
+    "rollup-plugin-peer-deps-external": "^2.2.4"
   },
   "dependencies": {
     "@babel/runtime": "^7.12.13"
