--- a/package.json
+++ b/package.json
@@ -60,11 +60,12 @@
     "@rollup/plugin-commonjs": "^24.0.0",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-terser": "^0.3.0",
-    "babel-jest": "^27.0.6",
+    "babel-jest": "^29.3.1",
     "eslint": "^8.5.0",
-    "husky": "^7.0.4",
-    "jest": "^27.0.6",
-    "jest-junit": "^13.0.0",
+    "husky": "^8.0.3",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
+    "jest-junit": "^15.0.0",
     "rimraf": "^3.0.2",
     "rollup": "^3.9.1",
     "rollup-plugin-ascii": "0.0.3",
